--- a/src/app/Pages/trainingsreport/trainingsreport.component.html
+++ b/src/app/Pages/trainingsreport/trainingsreport.component.html
@@ -50,6 +50,7 @@
               [xaxis]="trendTrainingsStacked.xaxis"
               [legend]="trendTrainingsStacked.legend"
               [fill]="trendTrainingsStacked.fill"
+              [colors]="trendTrainingsStacked.colors"
             ></apx-chart>
           </div>
         </div>
