--- a/src/app/Pages/alltrainings/alltrainings.component.html
+++ b/src/app/Pages/alltrainings/alltrainings.component.html
@@ -30,7 +30,7 @@
         >
         <div class="input-group">
           <input
-            type="text"
+            type="search"
             class="form-control form-control-sm my-inputextend"
             id="inlineFormInputGroupid"
             placeholder="CNTT-20250226-40"
@@ -66,7 +66,7 @@
           }
         </select>
       </div>
-      <div class="col-auto">
+      <!-- <div class="col-auto">
         <label class="label ms-1 strong" for="inlineFormSelectCategory"
           >Category</label
         >
@@ -80,7 +80,7 @@
           <option [value]="item.id">{{ item.name }}</option>
           }
         </select>
-      </div>
+      </div> -->
       <div class="col-auto">
         <label class="label ms-1 strong" for="inlineFormSelectClient"
           >Sponsor</label
@@ -110,6 +110,34 @@
           <option [value]="item.id">{{ item.name }}</option>
           }
         </select>
+      </div>
+      <div class="col-auto">
+        <label class="label ms-1 strong" for="inlineFormInputInvoice"
+          >Invoice #</label
+        >
+        <div class="input-group">
+          <input
+            type="search"
+            class="form-control form-control-sm my-inputextend"
+            id="inlineFormInputInvoice"
+            placeholder="0103-25-3687"
+            formControlName="invoicenumber"
+          />
+        </div>
+      </div>
+      <div class="col-auto">
+        <label class="label ms-1 strong" for="inlineFormInputCheque"
+          >Cheque #</label
+        >
+        <div class="input-group">
+          <input
+            type="search"
+            class="form-control form-control-sm my-inputextend"
+            id="inlineFormInputCheque"
+            placeholder="35337071"
+            formControlName="cheque"
+          />
+        </div>
       </div>
       <div class="col-auto">
         <label class="label ms-1 strong" for="inlineFormInputGroupStartDate"
@@ -252,8 +280,8 @@
       [columnDefs]="colDefs"
       [getRowStyle]="getRowStyle"
       [pagination]="true"
-      [paginationPageSize]="20"
-      [paginationPageSizeSelector]="[5, 10, 20, 50, 100]"
+      [paginationPageSize]="50"
+      [paginationPageSizeSelector]="[25, 50, 100, 150, 200]"
       [defaultColDef]="defaultColDef"
       (gridReady)="onGridReady($event)"
       [gridOptions]="gridOptions"
