--- a/src/app/Pages/assessmentsreport/assessmentsreport.component.html
+++ b/src/app/Pages/assessmentsreport/assessmentsreport.component.html
@@ -58,14 +58,14 @@
   </div>
   <hr />
   <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12">
+    <div class="col-12">
       <div class="card mb-4">
         <div class="card-body bg-warning bg-opacity-50">
           <h5 class="card-title">Session Report All</h5>
           <form [formGroup]="formAll">
             <div class="row my-2">
               <div class="col-auto">
-                <div class="form-floating mb-3">
+                <div class="form-floating mb-2">
                   <input
                     type="date"
                     class="form-control form-control-sm border border-warning border-2"
@@ -76,7 +76,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <input
                     type="date"
                     class="form-control form-control-sm border border-warning border-2"
@@ -87,7 +87,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingAllSelectlicensetype"
@@ -104,7 +104,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingAllSelectbloodgroup"
@@ -119,7 +119,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingAllSelectVisual"
@@ -134,7 +134,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingAllSelectLocation"
@@ -149,7 +149,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingAllSelectResult"
@@ -164,7 +164,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingAllSelectStage"
@@ -179,7 +179,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingAllSelectTitle"
@@ -194,7 +194,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingSelectVehicle"
@@ -209,7 +209,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingSelectContractor"
@@ -224,7 +224,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingSelectTrainer"
@@ -280,7 +280,7 @@
           <form [formGroup]="formDate">
             <div class="row">
               <div class="col-auto">
-                <div class="form-floating mb-3">
+                <div class="form-floating mb-2">
                   <input
                     type="date"
                     class="form-control form-control-sm border border-warning border-2"
@@ -291,7 +291,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <input
                     type="date"
                     class="form-control form-control-sm border border-warning border-2"
@@ -302,7 +302,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingSelectclient"
@@ -317,7 +317,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                   <select
                     class="form-select form-select-sm border border-warning border-2"
                     id="floatingSelect"
@@ -431,7 +431,7 @@
     </div>
   </div>
 
-  <div class="table-responsive mt-3">
+  <div class="table-responsive">
     <table
       class="table table-hover table-bordered fs-7"
       id="allassessment-table"
@@ -442,6 +442,7 @@
           <th>Session Name</th>
           <th>Session Date</th>
           <th>Result</th>
+          <th>Title</th>
           <th>Driver Name</th>
           <th>Driver NIC</th>
         </tr>
@@ -463,7 +464,10 @@
             {{ item.sessiondate | date }}
           </td>
           <td>
-            {{ resultName(item.resultid) }}
+            {{ genericName(results(), item.resultid) }}
+          </td>
+          <td>
+            {{ genericName(titles(), item.titleid) }}
           </td>
           <td>
             <div>
