--- a/src/app/Pages/assessmentsreport/assessmentsreport.component.html
+++ b/src/app/Pages/assessmentsreport/assessmentsreport.component.html
@@ -20,7 +20,7 @@
     <div class="col-lg-6 col-md-6 col-sm-12">
       <div class="card mb-4">
         <div class="card-body bg-warning bg-opacity-50">
-          <h5 class="card-title">Yearly Assessments Count</h5>
+          <h5 class="card-title">Yearly Assessments & Awareness Count</h5>
           <div id="chart1">
             <apx-chart
               [series]="trendAssessments.series"
@@ -50,6 +50,7 @@
               [xaxis]="trendAssessmentsStacked.xaxis"
               [legend]="trendAssessmentsStacked.legend"
               [fill]="trendAssessmentsStacked.fill"
+              [colors]="trendAssessmentsStacked.colors"
             ></apx-chart>
           </div>
         </div>
