--- a/src/app/Pages/trainingsreport/trainingsreport.component.html
+++ b/src/app/Pages/trainingsreport/trainingsreport.component.html
@@ -58,6 +58,8 @@
     </div>
   </div>
   <hr />
+
+  @if (reportsEnabled()) {
   <div class="row">
     <div class="col-12">
       <div class="card mb-4">
@@ -483,7 +485,7 @@
       </div>
     </div>
   </div>
-
+  }
   <div class="table-responsive">
     <table class="table table-hover table-bordered fs-7" id="training-table">
       <thead class="table-primary">
